# binance-sma-bot

./: .dockerignore  .env.example  .env.portfolio.example  .gitignore  Dockerfile  README.md  continuous_research.py  docker-compose.yml  pyproject.toml  refresh_major_daily.py  requirements.txt  research_optimizer.py  research_portfolio_backtest.py  run.py
.github/workflows/: tests.yml
src/binance_sma_bot/: __init__.py  backtest.py  cli.py  config.py  engine.py  exchange.py  history.py  portfolio_cli.py  portfolio_paper.py  process_lock.py  state.py  strategy.py
tests/: test_backtest.py  test_backtest_cli.py  test_config.py  test_engine.py  test_exchange.py  test_history.py  test_portfolio_paper.py  test_process_lock.py  test_research_portfolio_backtest.py  test_state.py  test_strategy.py
