[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-sma-bot"
version = "0.5.0"
description = "Safety-first Binance Spot SMA and optimized portfolio paper trading starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ccxt==4.5.64",
  "filelock==3.29.7",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[project.scripts]
sma-bot = "binance_sma_bot.cli:main"
portfolio-paper = "binance_sma_bot.portfolio_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
